--- a/index.html
+++ b/index.html
@@ -8,40 +8,50 @@
   <title>Portifólio</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+  <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <header class="cabecalho">
     <img class="cabecalho-imagem" src="img/logo.png" alt="logo principal">
     <nav class="icone">
-      <a class="icone">Sobre mim</a>
-      <a href="https://github.com/layanefervale"><i class="fa-brands fa-github"></i>
-        <a href="https://www.linkedin.com/in/layane-vale/"><i class="fa-brands fa-linkedin"></i>
-      <a class="icone" href="https://www.tumblr.com/meuportifolio-layanevale/744769921344552960?source=share">Curriculo</a>
+      <a class="cabecalho-menu-item" href="https://www.tumblr.com/meuportifolio-layanevale/745957959968964608/sobre-mim?source=share">Sobre mim 🟣</a>
+      <a class="cabecalho-menu-item" href="https://github.com/layanefervale">GitHub 🟣</a>
+      <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/layane-vale/">Linkedin 🟣</a>
+      <a class="cabecalho-menu-item" href="https://www.tumblr.com/meuportifolio-layanevale/744769921344552960?source=share">Curriculo </a>
     </nav>
   </header>
 
   <main class="conteudo">
     <section class="conteudo-principal">
       <div class="conteudo-principal-escrito">
-        <h1 class="conteudo-principal-escrito-titulo">Layane Vale</h1>
-        <h2 class="conteudo-principal-escrito-subtitulo">Front-End Developer & Web Designer</h2>
-        <button class="conteudo-principal-escrito-botao">Baixar CV</button>
+        <h1 class="conteudo-principal-escrito-titulo">LAYANE VALE </h1>
+        <h2 class="conteudo-principal-escrito-subtitulo"><strong>Front-End Developer & Web Designer</strong></h2>
+        <button class="conteudo-principal-escrito-botao">Contato 📲</button>
       </div>
       <img class="conteudo-principal-imagem"src="img/layane.png" alt="Imagem da layane">
     </section>
 
     <section class="conteudo-secundario">
-      <h3 class="conteudo-secundario-titulo">Um pouco sobre meu trabalho</h3>
+      <h3 class="conteudo-secundario-titulo">Breve resumo sobre minha jornada 👩🏻‍💻</h3>
       <p class="conteudo-secundario-paragrafo"><strong>Designer Gráfica</strong> que atuava como freelancer, iniciei minha transição de carreira a aproximadamente 1 ano e meio para a aréa de <strong>Tecnologia</strong></p>
       <p class="conteudo-secundario-paragrafo">logo de cara me identifiquei com <strong>Front-End</strong>, e desde então venho aprimorando minhas habilidades em <strong>CSS, HTML, JavaScript, React</strong>, e também em áreas correlatas</p>
       <p class="conteudo-secundario-paragrafo">ao design gráfico, como <strong>UI/UX, Design Web,</strong> e <strong>Mobile</strong>.</p>
     </section>
   </main>
 
-  <footer class="serviço">
-    <img class="serviço-imagem" src="img/serviço.png">
-  </footer>
-</body>
+  <section class="conteudo-paragrafo">
+      <h4 class="conteudo-secundario-titulo">Um pouco sobre meu trabalho 👩🏻‍💻</h4>
+      <p class="conteudo-secundario-2"><strong>Designer Gráfica</strong> que atuava como freelancer, iniciei minha transição de carreira a aproximadamente 1 ano e meio para a aréa de <strong>Tecnologia</strong></p>
+      <p class="conteudo-secundario-2">logo de cara me identifiquei com <strong>Front-End</strong>, e desde então venho aprimorando minhas habilidades em <strong>CSS, HTML, JavaScript, React</strong>, e também em áreas correlatas</p>
+      <p class="conteudo-secundario-2">ao design gráfico, como <strong>UI/UX, Design Web,</strong> e <strong>Mobile</strong>.</p>
+    </section>
+
+  </main>
+
+
 
 </html>
