--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
   <header class="cabecalho">
     <img class="cabecalho-imagem" src="img/logo.png" alt="logo principal">
     <nav class="icone">
-      <a class="cabecalho-menu-item" href="https://www.tumblr.com/meuportifolio-layanevale/745957959968964608/sobre-mim?source=share">Sobre mim 🟣</a>
+
       <a class="cabecalho-menu-item" href="https://github.com/layanefervale">GitHub 🟣</a>
       <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/layane-vale/">Linkedin 🟣</a>
       <a class="cabecalho-menu-item" href="https://www.tumblr.com/meuportifolio-layanevale/744769921344552960?source=share">Curriculo </a>
@@ -36,7 +36,7 @@
     </section>
 
     <section class="conteudo-secundario">
-      <h3 class="conteudo-secundario-titulo">Breve resumo sobre minha jornada 👩🏻‍💻</h3>
+      <h3 class="conteudo-secundario-titulo">Sobre mim 👩🏻‍💻</h3>
       <p class="conteudo-secundario-paragrafo"><strong>Designer Gráfica</strong> que atuava como freelancer, iniciei minha transição de carreira a aproximadamente 1 ano e meio para a aréa de <strong>Tecnologia</strong></p>
       <p class="conteudo-secundario-paragrafo">logo de cara me identifiquei com <strong>Front-End</strong>, e desde então venho aprimorando minhas habilidades em <strong>CSS, HTML, JavaScript, React</strong>, e também em áreas correlatas</p>
       <p class="conteudo-secundario-paragrafo">ao design gráfico, como <strong>UI/UX, Design Web,</strong> e <strong>Mobile</strong>.</p>
@@ -44,14 +44,65 @@
   </main>
 
   <section class="conteudo-paragrafo">
-      <h4 class="conteudo-secundario-titulo">Um pouco sobre meu trabalho 👩🏻‍💻</h4>
-      <p class="conteudo-secundario-2"><strong>Designer Gráfica</strong> que atuava como freelancer, iniciei minha transição de carreira a aproximadamente 1 ano e meio para a aréa de <strong>Tecnologia</strong></p>
-      <p class="conteudo-secundario-2">logo de cara me identifiquei com <strong>Front-End</strong>, e desde então venho aprimorando minhas habilidades em <strong>CSS, HTML, JavaScript, React</strong>, e também em áreas correlatas</p>
-      <p class="conteudo-secundario-2">ao design gráfico, como <strong>UI/UX, Design Web,</strong> e <strong>Mobile</strong>.</p>
+      <h4 class="conteudo-secundario-titulo">Como posso te ajudar?</h4>
+      <p class="conteudo-secundario-2">Se você precisa de um site, aplicativo, arte gráfica, está no lugar certo!</p>
+    
     </section>
 
   </main>
 
+  <div class="container">
+    <!-- Primeiro Card -->
+    <div class="card">
+        <div class="img">
+            <img src="img/aplicacao.png">
+        </div>
+        <h1>Aplicação Web</h1>
+        <div class="content">
+            <p>
+              Desde uma simples landpage, sites pessoais ou comercial, 
+              até lojas virtuais e sistemas complexos para internet.
+            </p>
+            <a href="https://api.whatsapp.com/send?phone=5561991379883&text=Ol%C3%A1,%20Sou%20Layane%20Vale!%20Voc%C3%AA%20ser%C3%A1%20redirecionado%20ao%20meu%20whatsapp.%20"">Orçamento</a>
+        </div>
+    </div>
+    <!-- Segundo Card -->
+    <div class="card">
+        <div class="img">
+            <img src="img/mobile.png">
+        </div>
+        <h1>Mobile</h1>
+        <div class="content">
+            <p>
+              Aplicações híbridas ou nativas em multiplataformas 
+              para dispositivos móveis com Android ou iOS, disponibilizando 
+              em suas respectivas lojas e extraindo o seu instalador.
+            </p>
+            <a href="https://api.whatsapp.com/send?phone=5561991379883&text=Ol%C3%A1,%20Sou%20Layane%20Vale!%20Voc%C3%AA%20ser%C3%A1%20redirecionado%20ao%20meu%20whatsapp.%20">Orçamento</a>
+        </div>
+    </div>
+    <!-- Terceiro Card -->
+    <div class="card">
+        <div class="img">
+            <img src="img/ux.png">
+        </div>
+        <h1>UI/UX Design</h1>
+        <div class="content">
+            <p>
+              A experiência do usuário e a análise interativa com a aplicação
+              é um diferencial para as aplicações modernas que focam soluções
+              no ponto de vista do usuário.
+            </p>
+            <a href="https://api.whatsapp.com/send?phone=5561991379883&text=Ol%C3%A1,%20Sou%20Layane%20Vale!%20Voc%C3%AA%20ser%C3%A1%20redirecionado%20ao%20meu%20whatsapp.%20">Orçamento</a>
+        </div>
+    </div>
+</div>
 
+</body>
 
 </html>
+
+
+
+
+
