--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <img class="cabecalho-imagem" src="img/logo.png" alt="logo principal">
     <nav class="icone">
 
-      <a class="cabecalho-menu-item" href="https://github.com/layanefervale">GitHub 🟣</a>
-      <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/layane-vale/">Linkedin 🟣</a>
-      <a class="cabecalho-menu-item" href="https://www.tumblr.com/meuportifolio-layanevale/744769921344552960?source=share">Curriculo </a>
+      <a class="cabecalho-menu-item" href="https://github.com/layanefervale">GITHUB 🟣</a>
+      <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/layane-vale/">LINKEDIN 🟣</a>
+      <a class="cabecalho-menu-item" href="https://www.tumblr.com/meuportifolio-layanevale/744769921344552960?source=share">CURRICULO</a>
     </nav>
   </header>
 
@@ -36,10 +36,7 @@
     </section>
 
     <section class="conteudo-secundario">
-      <h3 class="conteudo-secundario-titulo">Sobre mim 👩🏻‍💻</h3>
-      <p class="conteudo-secundario-paragrafo"><strong>Designer Gráfica</strong> que atuava como freelancer, iniciei minha transição de carreira a aproximadamente 1 ano e meio para a aréa de <strong>Tecnologia</strong></p>
-      <p class="conteudo-secundario-paragrafo">logo de cara me identifiquei com <strong>Front-End</strong>, e desde então venho aprimorando minhas habilidades em <strong>CSS, HTML, JavaScript, React</strong>, e também em áreas correlatas</p>
-      <p class="conteudo-secundario-paragrafo">ao design gráfico, como <strong>UI/UX, Design Web,</strong> e <strong>Mobile</strong>.</p>
+      <img class="imagem-apresentação" src="img/program..png" alt="imagem-apresentação">
     </section>
   </main>
 
