--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
     <div>
-      <h1 id="titulo">Olá, Desenvolvedor </h1>
+      <h1 id="titulo">Oláa, Desenvolvedor </h1>
       <p id="subtitulo">Quer fechar uma parceria? 👉 </p>
       <br>
   </div>
