--- a/index.html
+++ b/index.html
@@ -88,78 +88,81 @@
         </div>
     </div>
     <div>
-      <h1 id="titulo">Oláa, Desenvolvedor </h1>
+      <h1 id="titulo">Olá, Desenvolvedor </h1>
       <p id="subtitulo">Quer fechar uma parceria? 👉 </p>
       <br>
-  </div>
+    </div>
 
-  <form>
-    <fieldset class="grupo">
-        <!-- Campo do nome com legenda "nome" e css de classe "campo" -->
-        &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-        <div class="campo">
-            <label for="nome"><strong>Nome</strong></label>
-            <input type="text" name="nome" id="nome" required>
+  </div>
+  <div>
+    <form>
+      <fieldset class="grupo">
+          <!-- Campo do nome com legenda "nome" e css de classe "campo" -->
+          &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+          <div class="campo">
+              <label for="nome"><strong>Nome</strong></label>
+              <input type="text" name="nome" id="nome" required>
+          </div>
+  
+          <div class="campo">
+            <label for="sobrenome"><strong>E-mail</strong></label>
+            <input type="text" name="sobrenome" id="sobrenome" required>
         </div>
-
-        <div class="campo">
-          <label for="sobrenome"><strong>E-mail</strong></label>
-          <input type="text" name="sobrenome" id="sobrenome" required>
+      </fieldset>
+  
+  
+      <div class="campo">
+        <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
+        <label>
+            <input type="radio" name="devweb" value="frontend" checked>Front-end
+        </label>
+        <label>
+            <input type="radio" name="devweb" value="backend">Back-end
+        </label>
+        <label>
+            <input type="radio" name="devweb" value="fullstack">Fullstack
+        </label>
       </div>
-  </fieldset>
-
-
-<div class="campo">
-  <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
-  <label>
-      <input type="radio" name="devweb" value="frontend" checked>Front-end
-  </label>
-  <label>
-      <input type="radio" name="devweb" value="backend">Back-end
-  </label>
-  <label>
-      <input type="radio" name="devweb" value="fullstack">Fullstack
-  </label>
-</div>
-
-<div class="campo">
-  <label for="senioridade"><strong>Senioridade</strong></label>
-  <select id="senioridade" required>
-    <option selected disabled value="">Selecione</option>
-    <option>Júnior</option>
-    <option>Pleno</option>
-    <option>Sênior</option>
-  </select>
-</div>
-
-<fieldset class="grupo">
-  <div id="check">
-      <label><strong>Selecione as tecnologias que utiliza:</strong></label><br><br>
-      <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
-      <label for="tecnologia1"> HTML</label>
-      <input type="checkbox" id="tecnologia2" name="tecnologia2" value="CSS">
-      <label for="tecnologia2"> CSS</label>
-      <input type="checkbox" id="tecnologia3" name="tecnologia3" value="JavaScript">
-      <label for="tecnologia3"> JavaScript</label>
-      <input type="checkbox" id="tecnologia4" name="tecnologia4" value="PHP">
-      <label for="tecnologia4"> PHP</label>
-      <input type="checkbox" id="tecnologia5" name="tecnologia5" value="C#">
-      <label for="tecnologia5"> C#</label>
-      <input type="checkbox" id="tecnologia6" name="tecnologia6" value="Python">
-      <label for="tecnologia6"> Python</label>
-      <input type="checkbox" id="tecnologia7" name="tecnologia7" value="Outra">
-      <label for="tecnologia7"> Outra</label>
-  </div>
-</fieldset>
-
-<div class="campo">
-  <br>
-  <label for="experiencia"><strong>Conte um pouco mais da sua experiência: </strong></label>
-  <textarea rows="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
-  <button class="botao" type="submit" onsubmit="">Concluído</button>  
-</div>
-
- 
+  
+      <div class="campo">
+        <label for="senioridade"><strong>Senioridade</strong></label>
+        <select id="senioridade" required>
+          <option selected disabled value="">Selecione</option>
+          <option>Júnior</option>
+          <option>Pleno</option>
+          <option>Sênior</option>
+        </select>
+      </div>
+  
+      <fieldset class="grupo">
+        <div id="check">
+            <label><strong>Selecione as tecnologias que utiliza:</strong></label><br><br>
+            <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
+            <label for="tecnologia1"> HTML</label>
+            <input type="checkbox" id="tecnologia2" name="tecnologia2" value="CSS">
+            <label for="tecnologia2"> CSS</label>
+            <input type="checkbox" id="tecnologia3" name="tecnologia3" value="JavaScript">
+            <label for="tecnologia3"> JavaScript</label>
+            <input type="checkbox" id="tecnologia4" name="tecnologia4" value="PHP">
+            <label for="tecnologia4"> PHP</label>
+            <input type="checkbox" id="tecnologia5" name="tecnologia5" value="C#">
+            <label for="tecnologia5"> C#</label>
+            <input type="checkbox" id="tecnologia6" name="tecnologia6" value="Python">
+            <label for="tecnologia6"> Python</label>
+            <input type="checkbox" id="tecnologia7" name="tecnologia7" value="Outra">
+            <label for="tecnologia7"> Outra</label>
+        </div>
+      </fieldset>
+  
+      <div class="campo">
+        <br>
+        <label for="experiencia"><strong>Conte um pouco mais da sua experiência: </strong></label>
+        <textarea rows="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
+        <button class="botao" type="submit" onsubmit="">Concluído</button>  
+      </div>
+    
+    </form>
+  </div>   
 
 
 </body>
