--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
             <a href="https://api.whatsapp.com/send?phone=5561991379883&text=Ol%C3%A1,%20Sou%20Layane%20Vale!%20Voc%C3%AA%20ser%C3%A1%20redirecionado%20ao%20meu%20whatsapp.%20">Orçamento</a>
         </div>
     </div>
-    <div>
-      <h1 id="titulo">Olá, Desenvolvedor </h1>
-      <p id="subtitulo">Quer fechar uma parceria? 👉 </p>
-      <br>
-    </div>
 
   </div>
   <div>
+    <div>
+      <h1 id="titulo">Olá, Desenvolvedor </h1>
+      <p id="subtitulo">Quer fechar uma parceria?  </p>
+      <br>
+    </div>
     <form>
       <fieldset class="grupo">
           <!-- Campo do nome com legenda "nome" e css de classe "campo" -->
@@ -158,7 +158,7 @@
         <br>
         <label for="experiencia"><strong>Conte um pouco mais da sua experiência: </strong></label>
         <textarea rows="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
-        <button class="botao" type="submit" onsubmit="">Concluído</button>  
+        <button type="submit" onsubmit="">Concluído</button>  
       </div>
     
     </form>
